--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,12 @@
 layout: base.njk
 isFront: true
 ---
-<header class="header w-full flex flex-col">
-  {% include "navbar.njk" %}
-  {% include "section.header.njk" %}
-</header>
+<h1 class="pressura">
+Alistair Lane
+</h1>
+<p class="pressura">
+Product Design Leader
+</p>
+<p class="pressura">
+<a href="mailto:alistair.m.lane@gmail.com">Email</a>
+</p>
