--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -2,6 +2,77 @@
 
 @tailwind base;
 
-@tailwind components;
+body {
+	padding: 100px;
+	letter-spacing: 0.3rem;
+	color: #000;
+}
 
-@tailwind utilities;
+h1 {
+  font-size: 18rem;
+  line-height: 15rem;
+  margin: 0 0 6rem 0;
+  padding: 0;
+}
+
+p {
+	font-size: 9rem;
+	line-height: 9rem;
+	margin: 0 0 9rem 0;
+	padding: 0;
+}
+
+
+.queens {
+  font-family: Queens;
+}
+
+.Pressura {
+  font-family: Pressura;
+}
+
+a { background: #000; color: #ffffff; padding: 1rem 3rem 1.5rem 3rem; border-radius: 12px;}
+
+
+@media only screen and (max-width: 1000px) {
+
+	h1 {
+  font-size: 12rem;
+  line-height: 12rem;
+  margin: 0 0 6rem 0;
+  padding: 0;
+}
+
+p {
+	font-size: 6rem;
+	line-height: 8rem;
+	margin: 0 0 4rem 0;
+	padding: 0;
+}
+
+  
+}
+
+
+@media only screen and (max-width: 720px) {
+
+body {
+	padding: 40px;
+}
+
+	h1 {
+  font-size: 6rem;
+  line-height: 6rem;
+  margin: 0 0 2rem 0;
+  padding: 0;
+}
+
+p {
+	font-size: 3rem;
+	line-height: 3.4rem;
+	margin: 0 0 3rem 0;
+	padding: 0;
+}
+
+  
+}
