--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -3,9 +3,7 @@
 <head>
   {% include "head.njk" %}
 </head>
-<body id="top" class="font-sans">
+<body>
   {{ content | safe }}
-  {% include "section.projects.njk" %}
 </body>
-  {% include "footer.njk" %}
 </html>
