--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -3,14 +3,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preload" href="/css/page.css" as="style">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="{{ description or site.description }}">
-<meta name="author" content="{{ site.author }}">
+<meta name="description" content="Alistair Lane">
+<meta name="author" content="Alistair Lane">
 <meta name="robots" content="index,follow">
 <script src="/js/typeit.min.js"></script>
 <!-- BEGIN SOCIAL META DATA -->
-<meta property="og:site_name" content="{{ site.title }}">
-<meta property="og:title" content="{{ title or site.title }}">
-<meta property="og:description" content="{{ description  or site.description }}">
+<meta property="og:site_name" content="Alistair Lane">
+<meta property="og:title" content="Alistair Lane">
+<meta property="og:description" content="Alistair Lane">
 <meta property="og:url" content="{{ absolutePageUrl }}">
 <meta name="twitter:card" content="{% if image -%}summary_large_image{% else %}summary{% endif %}">
 {%- if image -%}
