--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -1,78 +1,64 @@
 @import "./custom.css";
 
+
 @tailwind base;
 
+
+html {
+	font-size: 10px;
+	line-height: 1.0;
+  width: 100%;
+  height: 100%;
+}
+
 body {
-	padding: 100px;
-	letter-spacing: 0.3rem;
-	color: #000;
+	color: #111111;
+	font-family: "Queens", serif;
+	-webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
-  font-size: 18rem;
-  line-height: 15rem;
-  margin: 0 0 6rem 0;
-  padding: 0;
+	font-size: 9.2rem;
+	line-height: 9.2rem;
+	padding-bottom: 6rem;
 }
 
-p {
-	font-size: 9rem;
-	line-height: 9rem;
-	margin: 0 0 9rem 0;
-	padding: 0;
+h2 {
+	font-size: 3.6rem;
+	line-height: 4.6rem;
+	padding-bottom: 6rem;
 }
 
-
-.queens {
-  font-family: Queens;
+.intro {
+	width: 40%;
+	margin: 0 10% 0 10%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
 }
 
-.Pressura {
-  font-family: Pressura;
+.profileimage {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	width: 40%;
 }
 
-a { background: #000; color: #ffffff; padding: 1rem 3rem 1.5rem 3rem; border-radius: 12px;}
-
-
-@media only screen and (max-width: 1000px) {
-
-	h1 {
-  font-size: 12rem;
-  line-height: 12rem;
-  margin: 0 0 6rem 0;
-  padding: 0;
+.sectiontwo {
+	margin-top: 50%;
 }
 
-p {
-	font-size: 6rem;
-	line-height: 8rem;
-	margin: 0 0 4rem 0;
-	padding: 0;
-}
-
-  
-}
-
-
-@media only screen and (max-width: 720px) {
-
-body {
-	padding: 40px;
-}
-
-	h1 {
-  font-size: 6rem;
-  line-height: 6rem;
-  margin: 0 0 2rem 0;
-  padding: 0;
-}
-
-p {
-	font-size: 3rem;
-	line-height: 3.4rem;
-	margin: 0 0 3rem 0;
-	padding: 0;
-}
-
-  
+@media only screen and (max-width: 800px) {
+  .profileimage {
+  	width: 100%;
+  	position: relative;
+  }
+  .intro {
+  	width: 80%;
+  	position: relative;
+  	margin: 0 10% 0 10%;
+  }
 }
