--- a/src/index.njk
+++ b/src/index.njk
@@ -2,12 +2,15 @@
 layout: base.njk
 isFront: true
 ---
-<h1 class="pressura">
-Alistair Lane
-</h1>
-<p class="pressura">
-Product Design Leader
-</p>
-<p class="pressura">
-<a href="mailto:alistair.m.lane@gmail.com">Email</a>
-</p>
+<div class="intro">
+<h1 class="antialiased">Hey,</h1>
+<h2>My name is Alistair Lane. I’m a product design leader at Shopify where I’ve spent the last 9 years building products, marketing campaigns and leading UX teams.</h2>
+</div>
+<img src="img/allylane.jpg" alt="Alistair Lane" class="profileimage">
+
+<div class="sectiontwo">
+	<div class="project">
+		<h2>Design language</h2>
+		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
+	</div>
+</div>
