--- a/src/index.njk
+++ b/src/index.njk
@@ -2,15 +2,41 @@
 layout: base.njk
 isFront: true
 ---
-<div class="intro">
-<h1 class="antialiased">Hey,</h1>
-<h2>My name is Alistair Lane. I’m a product design leader at Shopify where I’ve spent the last 9 years building products, marketing campaigns and leading UX teams.</h2>
+<div class="gradient"></div>
+
+
+<div class="header">
+	<div class="intro">
+	<h1>Hey,</h1>
+	<h2>My name is Alistair Lane. I’m a product design leader at Shopify where I’ve spent the last 9 years building products, marketing campaigns and leading UX teams.</h2>
+	</div>
+			<img src="img/allylane.jpg" w alt="Alistair Lane" class="profileimage">
 </div>
-<img src="img/allylane.jpg" alt="Alistair Lane" class="profileimage">
 
 <div class="sectiontwo">
 	<div class="project">
 		<h2>Design language</h2>
 		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
+		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+	</div>
+	<div class="project rightcolumn">
+		<h2>Polaris</h2>
+		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
+		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+	</div>
+	<div class="project">
+		<h2>Frenzy</h2>
+		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
+		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+	</div>
+	<div class="project rightcolumn">
+		<h2>Creativity talk</h2>
+		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
+		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+	</div>
+	<div class="project">
+		<h2>More</h2>
+		<p><a href="https://www.instagram.com/earlythursday/">Early Thursday &#127928;<span>&rarr;</span></a></p>
+		<p><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">To Catch a Thief &#127928;<span>&rarr;</span></a></p>
 	</div>
 </div>
