--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -1,8 +1,10 @@
-@import "./custom.css";
-
-
 @tailwind base;
 
+@font-face {
+  font-family: "Queens";
+  src: url("../fonts/Queens_W-Medium.woff2") format("woff2"),
+       url("../fonts/Queens_W-Medium.woff") format("woff");
+}
 
 html {
 	font-size: 10px;
@@ -20,6 +22,36 @@ body {
   height: 100%;
 }
 
+
+.alistair {
+	width: 100%;
+	height: 100%;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	z-index: 3;
+	opacity: 0.06;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: -1;
+	mix-blend-mode: multiply;
+}
+
+.gradient {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	z-index: -1;
+  filter: contrast(100%) brightness(100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background: 
+	linear-gradient(40deg, #B0B7BF, #F2F2F2),
+	url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='6.51' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+}
+
 h1 {
 	font-size: 9.2rem;
 	line-height: 9.2rem;
@@ -29,15 +61,50 @@ h1 {
 h2 {
 	font-size: 3.6rem;
 	line-height: 4.6rem;
+}
+
+p {
+	font-size: 2.4rem;
+	line-height: 3.2rem;
+	padding-bottom: 0rem;
+}
+
+a {
+	border-bottom: 1px solid #111111;
+	padding-bottom: 6px;
+}
+
+a:hover span {
+	padding-left: 4px;
+}
+
+.intro h2 {
 	padding-bottom: 6rem;
 }
 
 .intro {
-	width: 40%;
-	margin: 0 10% 0 10%;
+	width: 35%;
+	margin: 0 0 0 10%;
 	position: absolute;
 	left: 0;
 	bottom: 0;
+}
+
+.project {
+	width: 35%;
+	display: inline-block;
+	margin: 0 0 0 10%;
+}
+
+.rightcolumn {
+	margin-left: 15%;
+}
+
+.sectiontwo {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
 }
 
 .profileimage {
@@ -45,20 +112,41 @@ h2 {
 	right: 0;
 	bottom: 0;
 	width: 40%;
+border-top-left-radius: 36px;
 }
 
-.sectiontwo {
-	margin-top: 50%;
-}
+
+
 
 @media only screen and (max-width: 800px) {
   .profileimage {
-  	width: 100%;
+  	width: 80%;
+  	margin: 0 0 0 10%;
   	position: relative;
   }
-  .intro {
+  .project, .intro {
   	width: 80%;
   	position: relative;
   	margin: 0 10% 0 10%;
   }
+
+	.header {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .intro {
+      order: 2;
+  }
+
+  .profileimage {
+      order: 1;
+  }
+
+  .sectiontwo {
+  	position: relative;
+  	top: 0;
+  }
+  
+
 }
