--- a/src/index.njk
+++ b/src/index.njk
@@ -15,28 +15,35 @@ isFront: true
 
 <div class="sectiontwo">
 	<div class="project">
-		<h2>Design language</h2>
+		<h3>Design language</h3>
 		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
-		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+		<p><a href="https://polaris.shopify.com/">Visit Polaris <span>&rarr;</span></a></p>
 	</div>
 	<div class="project rightcolumn">
-		<h2>Polaris</h2>
-		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
-		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+		<h3>Polaris</h3>
+		<p>Shopify launched the first official release of our design system in 2017. I designed the website that both internal and external UXers used to work with the system. </p>
+		<p><a href="https://dribbble.com/shots/3455831-Polaris">Check out the Dribble post <span>&rarr;</span></a></p>
 	</div>
 	<div class="project">
-		<h2>Frenzy</h2>
-		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
-		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+		<h3>Frenzy</h3>
+		<p>In 2017, Shopify created the Garage. A purpose built area to focus on ambitious projects. I led the UX team. I wrote a short article about our design process. </p>
+		<p><a href="https://medium.com/shopify-ux/move-fast-and-make-things-82deb27227c2">Read the Medium article <span>&rarr;</span></a></p>
 	</div>
 	<div class="project rightcolumn">
-		<h2>Creativity talk</h2>
-		<p>I led the Creative Direction team through a complete refresh of our design language which is used today throughout our suite of products. </p>
-		<p><a href="">Read on Medium <span>&rarr;</span></a></p>
+		<h3>Take back creativity</h3>
+		<p>In 2018, I gave a talk at internal UX conference to a team of 300+ on the subject of creativity.</p>
+		<p><a href="https://www.youtube.com/watch?v=RS1wQgs9vOs">Watch on Youtube<span>&rarr;</span></a></p>
 	</div>
-	<div class="project">
-		<h2>More</h2>
-		<p><a href="https://www.instagram.com/earlythursday/">Early Thursday &#127928;<span>&rarr;</span></a></p>
-		<p><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">To Catch a Thief &#127928;<span>&rarr;</span></a></p>
+	<div class="project more">
+		<h3>More...</h3>
+		<p>I’ve worked on a lot of fun, creative projects over the years. Here’s some more stuff I’ve put out in the world.</p>
+		<p class="morelink"><a href="https://themes.shopify.com/themes/colorblock/styles/default">Colorblock Shopify Theme <span>&rarr;</span></a></p>
+		<!--p class="morelink"><a href="https://themes.shopify.com/themes/origin/styles/default">Origin Shopify Theme<span>&rarr;</span></a></p-->
+		<p class="morelink"><a href="https://instagram.com/pedalstal">Pedalstal <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://www.instagram.com/earlythursday/">Early Thursday <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">To Catch a Thief <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">Solo music <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://www.shopify.ca/blog/multichannel-shopify">Shopify Home <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://shopify.dev/themes/tools/online-editor">Shopify Theme Editor <span>&rarr;</span></a></p>
 	</div>
 </div>
