--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -20,6 +20,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100%;
+  letter-spacing: 0.02rem;
 }
 
 
@@ -60,22 +61,39 @@ h1 {
 
 h2 {
 	font-size: 3.6rem;
-	line-height: 4.6rem;
+	line-height: 5.2rem;
 }
 
+h3 {
+	font-size: 5.2rem;
+	line-height: 6.4rem;
+	padding-bottom: 1.3rem;
+}
+
+
 p {
-	font-size: 2.4rem;
-	line-height: 3.2rem;
+	font-size: 2.6rem;
+	line-height: 4.4rem;
 	padding-bottom: 0rem;
+	margin-bottom: 4.8rem;
 }
 
 a {
 	border-bottom: 1px solid #111111;
-	padding-bottom: 6px;
+	padding-bottom: 2px;
+	position: relative;
+}
+
+a span {
+	position: absolute;
+	right: -26px;
+	top: -4px;
+	transition: all 100ms cubic-bezier(0.530, 0.105, 0.330, 0.920);
 }
 
 a:hover span {
-	padding-left: 4px;
+	right: -34px;
+	transition: all 100ms cubic-bezier(0.530, 0.105, 0.330, 0.920);
 }
 
 .intro h2 {
@@ -94,6 +112,17 @@ a:hover span {
 	width: 35%;
 	display: inline-block;
 	margin: 0 0 0 10%;
+	vertical-align: top;
+	padding-top: 10rem;
+}
+
+
+.more {
+	padding-bottom: 10rem;
+}
+
+.more .morelink {
+	margin-bottom: 1rem;
 }
 
 .rightcolumn {
@@ -105,6 +134,7 @@ a:hover span {
 	top: 100%;
 	left: 0;
 	width: 100%;
+	padding-top: 10rem;
 }
 
 .profileimage {
@@ -123,11 +153,13 @@ border-top-left-radius: 36px;
   	width: 80%;
   	margin: 0 0 0 10%;
   	position: relative;
+  	border-radius: 0px 0px 36px 36px;
   }
   .project, .intro {
   	width: 80%;
   	position: relative;
   	margin: 0 10% 0 10%;
+  	padding-top: 10rem;
   }
 
 	.header {
@@ -139,6 +171,10 @@ border-top-left-radius: 36px;
       order: 2;
   }
 
+  .intro h2 {
+  	padding-bottom: 0;
+  }
+
   .profileimage {
       order: 1;
   }
@@ -146,6 +182,7 @@ border-top-left-radius: 36px;
   .sectiontwo {
   	position: relative;
   	top: 0;
+  	padding-top: 0;
   }
   
 
