--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -70,7 +70,6 @@ h3 {
 	padding-bottom: 1.3rem;
 }
 
-
 p {
 	font-size: 2.6rem;
 	line-height: 4.4rem;
@@ -147,6 +146,39 @@ border-top-left-radius: 36px;
 
 
 
+@media only screen and (min-width: 1800px) {
+	h1 {
+	font-size: 13.2rem;
+	line-height: 13.2rem;
+}
+
+h2 {
+	font-size: 5.6rem;
+	line-height: 7.2rem;
+}
+
+h3 {
+	font-size: 8.2rem;
+	line-height: 8.4rem;
+	padding-bottom: 2.6rem;
+}
+
+p {
+	font-size: 4.6rem;
+	line-height: 6.4rem;
+}
+
+a span {
+	right: -46px;
+	top: 0px;
+}
+
+a:hover span {
+	right: -54px;
+}
+
+}
+
 
 @media only screen and (max-width: 800px) {
   .profileimage {
@@ -184,6 +216,4 @@ border-top-left-radius: 36px;
   	top: 0;
   	padding-top: 0;
   }
-  
-
 }
