--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -146,7 +146,7 @@ border-top-left-radius: 36px;
 
 
 
-@media only screen and (min-width: 1800px) {
+@media only screen and (min-width: 2200px) {
 	h1 {
 	font-size: 13.2rem;
 	line-height: 13.2rem;
@@ -182,16 +182,20 @@ a:hover span {
 
 @media only screen and (max-width: 800px) {
   .profileimage {
-  	width: 80%;
-  	margin: 0 0 0 10%;
+  	width: 90%;
+  	margin: 0 0 0 5%;
   	position: relative;
-  	border-radius: 0px 0px 36px 36px;
+  	border-radius: 0px 0px 18px 18px;
   }
   .project, .intro {
   	width: 80%;
   	position: relative;
   	margin: 0 10% 0 10%;
-  	padding-top: 10rem;
+  	padding-top: 6rem;
+  }
+
+  h1 {
+  	padding-bottom: 3.6rem;
   }
 
 	.header {
