--- a/src/index.njk
+++ b/src/index.njk
@@ -26,7 +26,7 @@ isFront: true
 	</div>
 	<div class="project">
 		<h3>Frenzy</h3>
-		<p>In 2017, Shopify created the Garage. A purpose built area to focus on ambitious projects. I led the UX team. I wrote a short article about our design process. </p>
+		<p>In 2017, Shopify created the Garage. A purpose built area to focus on ambitious projects. I led the UX team, and the most successful project we shipped was Frenzy. I wrote a short article about our design process. </p>
 		<p><a href="https://medium.com/shopify-ux/move-fast-and-make-things-82deb27227c2">Read the Medium article <span>&rarr;</span></a></p>
 	</div>
 	<div class="project rightcolumn">
@@ -36,14 +36,14 @@ isFront: true
 	</div>
 	<div class="project more">
 		<h3>More...</h3>
-		<p>I’ve worked on a lot of fun, creative projects over the years. Here’s some more stuff I’ve put out in the world.</p>
+		<p>I’ve worked on a lot of fun, creative projects over the years. Here’s some more work I’ve put out in the world.</p>
 		<p class="morelink"><a href="https://themes.shopify.com/themes/colorblock/styles/default">Colorblock Shopify Theme <span>&rarr;</span></a></p>
 		<!--p class="morelink"><a href="https://themes.shopify.com/themes/origin/styles/default">Origin Shopify Theme<span>&rarr;</span></a></p-->
 		<p class="morelink"><a href="https://instagram.com/pedalstal">Pedalstal <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://www.instagram.com/earlythursday/">Early Thursday <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">To Catch a Thief <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">Solo music <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://www.shopify.ca/blog/multichannel-shopify">Shopify Home <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://shopify.dev/themes/tools/online-editor">Shopify Theme Editor <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://open.spotify.com/artist/3XzcT9Ar0DSzEotCRVD2X9">Solo music <span>&rarr;</span></a></p>
+		<!--p class="morelink"><a href="https://www.shopify.ca/blog/multichannel-shopify">Shopify Home <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://shopify.dev/themes/tools/online-editor">Shopify Theme Editor <span>&rarr;</span></a></p-->
 	</div>
 </div>
