--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -7,6 +7,7 @@
 <meta name="author" content="Alistair Lane">
 <meta name="robots" content="index,follow">
 <script src="/js/typeit.min.js"></script>
+<link rel="icon" type="image/x-icon" href="/img/alistairlane.ico">
 <!-- BEGIN SOCIAL META DATA -->
 <meta property="og:site_name" content="Alistair Lane">
 <meta property="og:title" content="Alistair Lane">
