--- a/src/index.njk
+++ b/src/index.njk
@@ -22,7 +22,7 @@ isFront: true
 	<div class="project rightcolumn">
 		<h3>Polaris</h3>
 		<p>Shopify launched the first official release of our design system in 2017. I designed the website that both internal and external UXers used to work with the system. </p>
-		<p><a href="https://dribbble.com/shots/3455831-Polaris">Check out the Dribble post <span>&rarr;</span></a></p>
+		<p><a href="https://dribbble.com/shots/3455831-Polaris">Check out the Dribbble post <span>&rarr;</span></a></p>
 	</div>
 	<div class="project">
 		<h3>Frenzy</h3>
