--- a/src/index.njk
+++ b/src/index.njk
@@ -20,13 +20,13 @@ isFront: true
 		<p><a href="https://polaris.shopify.com/">Visit Polaris <span>&rarr;</span></a></p>
 	</div>
 	<div class="project rightcolumn">
-		<h3>Polaris</h3>
+		<h3>Polaris style guide</h3>
 		<p>Shopify launched the first official release of our design system in 2017. I designed the website that both internal and external UXers used to work with the system. </p>
 		<p><a href="https://dribbble.com/shots/3455831-Polaris">Check out the Dribbble post <span>&rarr;</span></a></p>
 	</div>
 	<div class="project">
 		<h3>Frenzy</h3>
-		<p>In 2017, Shopify created the Garage. A purpose built area to focus on ambitious projects. I led the UX team, and the most successful project we shipped was Frenzy. I wrote a short article about our design process. </p>
+		<p>The Garage was a purpose built area within Shopify to quick, experimental projects. I led the UX team, and the most noteable project we shipped was Frenzy. I wrote a short article about our design process. </p>
 		<p><a href="https://medium.com/shopify-ux/move-fast-and-make-things-82deb27227c2">Read the Medium article <span>&rarr;</span></a></p>
 	</div>
 	<div class="project rightcolumn">
