--- a/src/index.njk
+++ b/src/index.njk
@@ -39,6 +39,7 @@ isFront: true
 		<p>I’ve worked on a lot of fun, creative projects over the years. Here’s some more work I’ve put out in the world.</p>
 		<p class="morelink"><a href="https://themes.shopify.com/themes/colorblock/styles/default">Colorblock Shopify Theme <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://play.google.com/store/apps/details?id=com.shopify.localdelivery&hl=en&gl=US">Local Delivery driver app <span>&rarr;</span></a></p>
+		<p class="morelink"><a href="https://www.shopify.com/blog/customer-segmentation">Customer segmentation<span>&rarr;</span></a></p>
 		<!--p class="morelink"><a href="https://themes.shopify.com/themes/origin/styles/default">Origin Shopify Theme<span>&rarr;</span></a></p-->
 		<p class="morelink"><a href="https://instagram.com/pedalstal">Pedalstal <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://www.instagram.com/earlythursday/">Early Thursday <span>&rarr;</span></a></p>
