--- a/src/index.njk
+++ b/src/index.njk
@@ -26,7 +26,7 @@ isFront: true
 	</div>
 	<div class="project">
 		<h3>Frenzy</h3>
-		<p>The Garage was a purpose built area within Shopify to quick, experimental projects. I led the UX team, and the most noteable project we shipped was Frenzy. I wrote a short article about our design process. </p>
+		<p>The Garage was a purpose built area within Shopify to work on quick, experimental projects. I led the UX team, and the most noteable project we shipped was Frenzy. I wrote a short article about our design process. </p>
 		<p><a href="https://medium.com/shopify-ux/move-fast-and-make-things-82deb27227c2">Read the Medium article <span>&rarr;</span></a></p>
 	</div>
 	<div class="project rightcolumn">
