--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -15,7 +15,7 @@ html {
 
 body {
 	color: #111111;
-	font-family: "Queens", serif;
+	font-family: "Inter", serif;
 	-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
@@ -57,6 +57,7 @@ h1 {
 	font-size: 9.2rem;
 	line-height: 9.2rem;
 	padding-bottom: 6rem;
+	font-family: "Queens", serif;
 }
 
 h2 {
