--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -15,7 +15,7 @@ html {
 
 body {
 	color: #111111;
-	font-family: "Inter", serif;
+	font-family: "Inter", sans-serif;
 	-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
