--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -24,6 +24,5 @@
 {% if not isFront %}
   <!-- include Normalize for regular text pages -->
   <link rel="stylesheet"  href="/css/normalize.min.css">
-  <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Inter">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 {% endif %}
