--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -20,7 +20,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100%;
-  letter-spacing: 0.02rem;
 }
 
 
@@ -57,18 +56,23 @@ h1 {
 	font-size: 9.2rem;
 	line-height: 9.2rem;
 	padding-bottom: 6rem;
+  letter-spacing: 0.02rem;
 	font-family: "Queens", serif;
 }
 
 h2 {
 	font-size: 3.6rem;
 	line-height: 5.2rem;
+  letter-spacing: 0.02rem;
+	font-family: "Queens", serif;
 }
 
 h3 {
 	font-size: 5.2rem;
 	line-height: 6.4rem;
+  letter-spacing: 0.02rem;
 	padding-bottom: 1.3rem;
+	font-family: "Queens", serif;
 }
 
 p {
