--- a/src/index.njk
+++ b/src/index.njk
@@ -20,32 +20,28 @@ isFront: true
 		<p><a href="https://polaris.shopify.com/">Visit Polaris <span>&rarr;</span></a></p>
 	</div>
 	<div class="project rightcolumn">
-		<h3>Polaris style guide</h3>
-		<p>Shopify launched the first official release of our design system in 2017. I designed the website that both internal and external UXers used to work with the system. </p>
-		<p><a href="https://dribbble.com/shots/3455831-Polaris">Check out the Dribbble post <span>&rarr;</span></a></p>
-	</div>
-	<div class="project">
-		<h3>Frenzy</h3>
-		<p>The Garage was a purpose built area within Shopify to work on quick, experimental projects. I led the UX team, and the most noteable project we shipped was Frenzy. I wrote a short article about our design process. </p>
-		<p><a href="https://medium.com/shopify-ux/move-fast-and-make-things-82deb27227c2">Read the Medium article <span>&rarr;</span></a></p>
-	</div>
-	<div class="project rightcolumn">
 		<h3>Take back creativity</h3>
 		<p>In 2018, I gave a talk at internal UX conference to a team of 300+ on the subject of creativity.</p>
 		<p><a href="https://www.youtube.com/watch?v=RS1wQgs9vOs">Watch on Youtube<span>&rarr;</span></a></p>
 	</div>
+	<div class="project">
+		<h3>Polaris style guide</h3>
+		<p>Shopify launched the first official release of our design system in 2017. I designed the website that both internal and external UXers used to work with the system. </p>
+		<p><a href="https://dribbble.com/shots/3455831-Polaris">Check out the Dribbble post <span>&rarr;</span></a></p>
+	</div>
+	<div class="project rightcolumn">
+		<h3>Frenzy</h3>
+		<p>The Garage was a purpose built area within Shopify to work on quick, experimental projects. I led the UX team, and the most noteable project we shipped was Frenzy. I wrote a short article about our design process. </p>
+		<p><a href="https://medium.com/shopify-ux/move-fast-and-make-things-82deb27227c2">Read the Medium article <span>&rarr;</span></a></p>
+	</div>
 	<div class="project more">
 		<h3>More...</h3>
 		<p>I’ve worked on a lot of fun, creative projects over the years. Here’s some more work I’ve put out in the world.</p>
+		<p class="morelink"><a href="https://themes.shopify.com/themes/origin/styles/default">Origin theme <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://themes.shopify.com/themes/colorblock/styles/default">Colorblock theme <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://play.google.com/store/apps/details?id=com.shopify.localdelivery&hl=en&gl=US">Local delivery driver app <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://www.shopify.com/blog/customer-segmentation">Customer segmentation<span>&rarr;</span></a></p>
-		<!--p class="morelink"><a href="https://themes.shopify.com/themes/origin/styles/default">Origin Shopify Theme<span>&rarr;</span></a></p-->
-		<p class="morelink"><a href="https://instagram.com/pedalstal">Pedalstal <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://www.instagram.com/earlythursday/">Early Thursday <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">To Catch a Thief <span>&rarr;</span></a></p>
 		<p class="morelink"><a href="https://open.spotify.com/artist/3XzcT9Ar0DSzEotCRVD2X9">Solo music <span>&rarr;</span></a></p>
-		<!--p class="morelink"><a href="https://www.shopify.ca/blog/multichannel-shopify">Shopify Home <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://shopify.dev/themes/tools/online-editor">Shopify Theme Editor <span>&rarr;</span></a></p-->
 	</div>
 </div>
