--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ isFront: true
 <div class="header">
 	<div class="intro">
 	<h1>Hey,</h1>
-	<h2>My name is Alistair Lane. I’m a product design leader at Shopify where I’ve spent the last 9 years building products, marketing campaigns and leading UX teams.</h2>
+	<h2>My name is Alistair Lane. I’m a product design leader based in Ottawa 🇨🇦. I spent almost 10 years at Shopify building products, marketing campaigns and leading UX teams.</h2>
 	</div>
 			<img src="img/allylane.jpg" w alt="Alistair Lane" class="profileimage">
 </div>
@@ -33,15 +33,5 @@ isFront: true
 		<h3>Frenzy</h3>
 		<p>The Garage was a purpose built area within Shopify to work on quick, experimental projects. I led the UX team, and the most noteable project we shipped was Frenzy. I wrote a short article about our design process. </p>
 		<p><a href="https://medium.com/shopify-ux/move-fast-and-make-things-82deb27227c2">Read the Medium article <span>&rarr;</span></a></p>
-	</div>
-	<div class="project more">
-		<h3>More...</h3>
-		<p>I’ve worked on a lot of fun, creative projects over the years. Here’s some more work I’ve put out in the world.</p>
-		<p class="morelink"><a href="https://themes.shopify.com/themes/origin/styles/default">Origin theme <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://themes.shopify.com/themes/colorblock/styles/default">Colorblock theme <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://www.shopify.com/blog/customer-segmentation">Customer segmentation<span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://www.instagram.com/earlythursday/">Early Thursday <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://open.spotify.com/artist/7BzQo9VlxvboArR70ukwWp">To Catch a Thief <span>&rarr;</span></a></p>
-		<p class="morelink"><a href="https://open.spotify.com/artist/3XzcT9Ar0DSzEotCRVD2X9">Solo music <span>&rarr;</span></a></p>
 	</div>
 </div>
