--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ isFront: true
 <div class="header">
 	<div class="intro">
 	<h1>Hey,</h1>
-	<h2>My name is Alistair Lane. I’m a product design leader based in Ottawa 🇨🇦. I spent almost 10 years at Shopify building products, marketing campaigns and leading UX teams.</h2>
+	<h2>My name is Alistair Lane. I’m a product design leader based in Ottawa, Canada. I spent almost 10 years at Shopify building products, marketing campaigns and leading UX teams.</h2>
 	</div>
 			<img src="img/allylane.jpg" w alt="Alistair Lane" class="profileimage">
 </div>
