--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -1,190 +1,157 @@
 @tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @font-face {
-  font-family: "Queens";
-  src: url("../fonts/Queens_W-Medium.woff2") format("woff2"),
-       url("../fonts/Queens_W-Medium.woff") format("woff");
+  font-family: "Saans";
+  src: url("../fonts/Saans-Medium-1.woff2") format("woff2"),
+    url("../fonts/Saans-Medium-1.woff") format("woff");
 }
 
 html {
-	font-size: 10px;
-	line-height: 1.0;
+  font-size: 10px;
+  line-height: 1;
   width: 100%;
   height: 100%;
-}
-
-body {
-	color: #111111;
-	font-family: "Inter", sans-serif;
-	-webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  width: 100%;
-  height: 100%;
-}
-
-
-.alistair {
-	width: 100%;
-	height: 100%;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	z-index: 3;
-	opacity: 0.06;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	z-index: -1;
-	mix-blend-mode: multiply;
-}
-
-.gradient {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	z-index: -1;
-  filter: contrast(100%) brightness(100%);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background: 
-	linear-gradient(40deg, #B0B7BF, #F2F2F2),
-	url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='6.51' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+  color: #121212;
+  text-wrap: balance;
 }
 
 h1 {
-	font-size: 8.4rem;
-	line-height: 9rem;
-	padding-bottom: 6rem;
-  letter-spacing: 0.02rem;
-	font-family: "Queens", serif;
+  color: #000;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 670;
+  line-height: 74px;
 }
 
 h2 {
-	font-size: 2.4rem;
-	line-height: 4.0rem;
-}
-
-h3 {
-	font-size: 4.6rem;
-	line-height: 6.4rem;
-  letter-spacing: 0.02rem;
-	padding-bottom: 1.3rem;
-	font-family: "Queens", serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 570;
+  line-height: normal;
+  letter-spacing: 0.44px;
 }
 
 p {
-	font-size: 1.8rem;
-	line-height: 3.3rem;
-	padding-bottom: 0rem;
-	margin-bottom: 4.8rem;
+  font-feature-settings: "ss01" on;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 570;
+  line-height: 26px;
 }
 
-a {
-	border-bottom: 1px solid #111111;
-	padding-bottom: 2px;
-	position: relative;
+.small {
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 570;
+  line-height: normal;
+  letter-spacing: 1.32px;
 }
 
-a span {
-	position: absolute;
-	right: -26px;
-	top: -5px;
-	transition: all 100ms cubic-bezier(0.530, 0.105, 0.330, 0.920);
+body {
+  color: #111111;
+  font-family: "Saans", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  background: #fefefe;
 }
 
-a:hover span {
-	right: -34px;
-	transition: all 100ms cubic-bezier(0.530, 0.105, 0.330, 0.920);
+.vid {
+  height: auto;
+  width: 100%;
+  max-height: 570px;
+  max-width: 300px;
+  border-radius: 0 0 16px 16px;
+  box-shadow: 0px 5.479px 3.223px 0px rgba(0, 0, 0, 0.01),
+    0px 13.167px 7.743px 0px rgba(0, 0, 0, 0.02),
+    0px 24.793px 14.355px 0px rgba(0, 0, 0, 0.03),
+    0px 44.226px 24.818px 0px rgba(0, 0, 0, 0.04),
+    0px 82.72px 44.312px 0px rgba(0, 0, 0, 0.05),
+    0px 198px 96px 0px rgba(0, 0, 0, 0.07);
 }
 
-.intro h2 {
-	padding-bottom: 6rem;
-}
-
-.intro {
-	width: 35%;
-	margin: 0 0 0 10%;
-	position: absolute;
-	left: 0;
-	bottom: 0;
-}
-
-.project {
-	width: 35%;
-	display: inline-block;
-	margin: 0 0 0 10%;
-	vertical-align: top;
-	padding-top: 10rem;
-}
-
-
-.more {
-	padding-bottom: 10rem;
-}
-
-.more .morelink {
-	margin-bottom: 1rem;
-}
-
-.rightcolumn {
-	margin-left: 15%;
-}
-
-.sectiontwo {
-	position: absolute;
-	top: 100%;
-	left: 0;
-	width: 100%;
-	padding-top: 10rem;
-}
-
-.profileimage {
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	width: 40%;
-border-top-left-radius: 36px;
-}
-
-@media only screen and (max-width: 800px) {
-  .profileimage {
-  	width: 90%;
-  	margin: 0 0 0 5%;
-  	position: relative;
-  	border-radius: 0px 0px 18px 18px;
+@media (max-width: 768px) {
+  .vid {
+    border-radius: 16px;
   }
-  .project, .intro {
-  	width: 80%;
-  	position: relative;
-  	margin: 0 10% 0 10%;
-  	padding-top: 6rem;
-  }
+}
 
-  h1 {
-  	padding-bottom: 3.6rem;
-  }
+.link {
+  display: inline-flex;
+  padding: 8px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  border-radius: 4px;
+  border: 1px solid #121212;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 570;
+  line-height: normal;
+  letter-spacing: 1.32px;
+  transition: box-shadow 0.075s ease-out;
+}
 
-	.header {
-      display: flex;
-      flex-direction: column;
-  }
+.link:hover {
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.59) inset,
+    0px 7px 7px 0px rgba(0, 0, 0, 0.51) inset,
+    0px 16px 10px 0px rgba(0, 0, 0, 0.3) inset,
+    0px 29px 12px 0px rgba(0, 0, 0, 0.09) inset,
+    0px 45px 13px 0px rgba(0, 0, 0, 0.01) inset;
+}
 
-  .intro {
-      order: 2;
-  }
+.imagelink {
+  display: flex;
+  width: 34px;
+  height: 34px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #121212;
+  transition: box-shadow 0.075s ease-out;
+}
 
-  .intro h2 {
-  	padding-bottom: 0;
-  }
+.imagelink:hover {
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.59) inset,
+    0px 7px 7px 0px rgba(0, 0, 0, 0.51) inset,
+    0px 16px 10px 0px rgba(0, 0, 0, 0.3) inset,
+    0px 29px 12px 0px rgba(0, 0, 0, 0.09) inset,
+    0px 45px 13px 0px rgba(0, 0, 0, 0.01) inset;
+}
 
-  .profileimage {
-      order: 1;
-  }
+.email img {
+  width: 22px;
+  height: 22px;
+}
 
-  .sectiontwo {
-  	position: relative;
-  	top: 0;
-  	padding-top: 0;
-  }
+.threads img {
+  width: 15.49px;
+  height: 18px;
+}
+
+.relativevideos {
+  position: relative;
+  height: 570px;
+  width: 300px;
+}
+
+.relativevideos * {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+h4 {
+  color: #121212;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 570;
+  line-height: 26px; /* 173.333% */
+  letter-spacing: 1.35px;
+  text-transform: uppercase;
 }
