--- a/src/index.njk
+++ b/src/index.njk
@@ -21,7 +21,7 @@ isFront: true
         <!-- Content for the middle column on desktop -->
     </div>
 <div class="w-full pt-8 md:pt-0 md:w-1/2 lg:w-1/3 px-4">
-<video autoplay muted loop class="vid w-full" id="video" src="img/allyl.mp4" preload="auto"></video>
+<video autoplay muted loop playsinline class="vid w-full" id="video" src="img/allyl.mp4" preload="auto"></video>
         <!-- Hidden video omitted for simplicity -->
     </div>
 </div>
