--- a/src/index.njk
+++ b/src/index.njk
@@ -8,8 +8,8 @@ isFront: true
 <h1 class="md:pt-0 pt-16 pb-11">Ally<br />Lane</h1>
         <p class="pb-7">My name is Alistair Lane. I’m a design leader based in Ottawa, Canada.
         I currently lead a small team at Noibu, and prior to that I spent almost 10 years at Shopify building products, marketing campaigns and leading UX teams.</p>
-        <div class="flex space-x-2">
-            <a id="emailLink" class="imagelink email" href="mailto:alistair.m.lane@gmail.com">
+        <div class="flex">
+            <a id="emailLink" class="imagelink email mr-4" href="mailto:alistair.m.lane@gmail.com">
                 <img src="img/email.png" alt="Email Logo">
             </a>
             <a class="imagelink threads" href="https://www.threads.net/@ally__lane">
